# pg-schema-diff

./: .gitignore  Acl.hs  Config.hs  Console.hs  Diff.hs  Index.hs  MD5.hs  PgSchemaDiff.hs  PostgreSQL.hs  Proc.hs  README.md  Sqlcmds.hs  Str.hs  Table.hs  TestDelta.hs  TestDiff.hs  TestPostgres.hs  Trigger.hs  UDT.hs  Util.hs  View.hs  XferData.hs  pg-schema-diff.cabal
