Name:           pg-schema-diff
Version:        0.1
Cabal-Version:  >= 1.2
License:        PublicDomain
Author:         r0ml
Synopsis:       Compare two sets of Postgres schemas and show the differences
Build-Type:     Simple

Executable pg_schema_diff
  Build-Depends:  template-haskell, HDBC-postgresql, HDBC, base, array, parsec
  Main-Is:        PgSchemaDiff.hs
  Hs-Source-Dirs: .
